# fraud-detection-mlops

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  commands.md  docker-compose.yaml  mlflow.db  pyproject.toml  root.text  setup.sh  sonar-project.properties
.github/workflows/: cd-build-push.yaml  cd-promote-production.yaml  cd-staging.yaml  cd.yaml  ci.yaml  rollback-production.yaml  terraform-apply.yaml  terraform-drift.yaml  terraform-plan.yaml
configs/: model_config.yaml  prometheus.yaml
docker/: .dockerignore  Dockerfile.serving  Dockerfile.training
helm/: helm-tree.txt
helm/kyverno-policies/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
helm/kyverno-policies/templates/: require-labels.yaml  restrict-registries.yaml  verify-images.yaml
helm/mlflow/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/mlflow/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
helm/serving/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/serving/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  (+1 more)
infrastructure/k8s-manifests/: storage-class.yaml
infrastructure/terraform/: .gitignore  deploy.sh  infra.txt
mlruns/: mlflow.db
models/: feature_engineer.pkl  model.pkl
src/data/: preprocessing.py
src/features/: feature_engineering.py
src/serving/: app.py
src/training/: evaluate.py  train.py
tests/integration/: test_api.py
tests/unit/: test_feature_engineering.py  test_preprocessing.py  test_serving.py
(+42 files in other folders)
